gatekeeper/goog-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
 name: mynamespace
 labels:
  gatekeeper: OPA
